tools/flowc/tests/errors/error9.flow
import string;

// Test on detection of union/struct re-declaration 

A : (a : int, b : int);
A ::= T1, T2;
	T1 : ();
	T2 : ();

B ::= T3, T4;
	T3 : ();
	T4 : ();
B : (a : int, b : int);


// Re-defintion from the global namespace

Some ::= T3, T4;
	T3 : ();
	T4 : ();

Maybe : (s : string);
